Add/update figures.

--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
@@ -24,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,20 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create DataFrame with data for all galaxies\n",
-    "# originals = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]\n",
-    "originals = [\"au6_or_l4_s127\"]\n",
     "data = create_binned_dataframe(\n",
-    "    simulations=originals, rxy_range=RXY_RANGE, n_bins=N_BINS)"
+    "    simulations=SAMPLE, rxy_range=RXY_RANGE, n_bins=N_BINS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,11 +214,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for simulation in originals:\n",
+    "for simulation in [\"au6_or_l4_s127\"]:\n",
     "\n",
     "    fig = plt.figure(figsize=(7.4, 2.0))\n",
     "    gs = fig.add_gridspec(nrows=1, ncols=4, hspace=0.0, wspace=0.0)\n",
@@ -239,11 +256,13 @@
     "\n",
     "    axs[0].legend(loc=\"upper left\", framealpha=0, fontsize=8.0, ncol=2)\n",
     "\n",
-    "    axs[3].text(x=0.95, y=0.95, s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
+    "    galaxy, _, _, _ = parse(simulation)\n",
+    "    label = f\"Au{galaxy}\"\n",
+    "    axs[3].text(x=0.95, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
     "                size=8.0, ha=\"right\", va=\"top\", transform=axs[3].transAxes)\n",
     "\n",
     "    fig.savefig(\n",
-    "        f\"../images/stellar_velocities_by_region/{simulation}{SUFFIX}.pdf\")\n",
+    "        f\"../images/stellar_velocities_by_region/au6_or_l4_s127{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
@@ -256,12 +275,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Remove zeros in standard deviation\n",
-    "for simulation in originals:\n",
+    "for simulation in SAMPLE:\n",
     "    for component, idx in settings.component_tags.items():\n",
     "        data[f\"{simulation.upper()}_VelocityDispersion_{component}_km/s\"][\n",
     "            data[f\"{simulation.upper()}_VelocityDispersion_{component}_km/s\"] \\\n",
@@ -270,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,13 +313,13 @@
     "axs[2, 0].set_ylabel(r'$v_\\phi$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
     "axs[3, 0].set_ylabel(r'$\\sigma_v$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
     "\n",
-    "for simulation in originals:\n",
+    "for simulation in SAMPLE:\n",
     "    c, label, zorder, lw = \"silver\", None, 10, 0.75\n",
     "    # if simulation == \"au11_or_l4_s127\":\n",
     "    #     c, label, zorder = \"tab:purple\", r\"$\\texttt{AU11_OR_L4_S127}$\", 11\n",
     "    #     lw = 1.25\n",
     "    if simulation == \"au6_or_l4_s127\":\n",
-    "        c, label, zorder = \"tab:green\", r\"$\\texttt{AU6_OR_L4_S127}$\", 12\n",
+    "        c, label, zorder = \"tab:green\", r\"$\\texttt{Au6}$\", 12\n",
     "        lw = 1.25\n",
     "    for component, idx in settings.component_tags.items():\n",
     "        for i, feature in enumerate(features):\n",
@@ -321,18 +340,18 @@
     "        x=0.5, y=0.95, size=8.0, ha=\"center\", va=\"top\",\n",
     "        transform=axs[0, j].transAxes,\n",
     "        s=settings.component_labels[settings.components[j]])\n",
-    "    for i, feature in enumerate(features):\n",
-    "        axs[i, j].plot(\n",
-    "            data[\"BinCenters_ckpc\"],\n",
-    "            np.nanmean(\n",
-    "                data[[f\"{simulation.upper()}_{feature}_{component}_km/s\" \\\n",
-    "                    for simulation in originals]], axis=1),\n",
-    "            lw=1.25, zorder=15, c='k', label=\"Average\")\n",
+    "    # for i, feature in enumerate(features):\n",
+    "    #     axs[i, j].plot(\n",
+    "    #         data[\"BinCenters_ckpc\"],\n",
+    "    #         np.nanmean(\n",
+    "    #             data[[f\"{simulation.upper()}_{feature}_{component}_km/s\" \\\n",
+    "    #                 for simulation in SAMPLE]], axis=1),\n",
+    "    #         lw=1.25, zorder=15, c='k', label=\"Average\")\n",
     "\n",
-    "axs[1, 0].legend(loc=\"upper left\", framealpha=0, fontsize=6.0)\n",
+    "axs[1, 0].legend(loc=\"upper left\", framealpha=0, fontsize=8.0)\n",
     "\n",
     "fig.savefig(\n",
-    "    f\"../images/stellar_velocities_by_region/originals_average{SUFFIX}.pdf\")\n",
+    "    f\"../images/stellar_velocities_by_region/included_average{SUFFIX}.pdf\")\n",
     "plt.close(fig)"
    ]
   }
