Add new SFR figure.

--- a/scripts/Star Formation.ipynb
+++ b/scripts/Star Formation.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -23,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLE = [f\"au{i}_or_l4\" for i in settings.groups[\"Included\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,28 +143,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(7.2, 7.2))\n",
-    "gs = fig.add_gridspec(nrows=6, ncols=5, hspace=0.0, wspace=0.0)\n",
+    "fig = plt.figure(figsize=(7, 8))\n",
+    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
     "axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
     "for ax in axs.flatten():\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
     "    ax.set_xlim(0, 14)\n",
     "    ax.set_ylim(0.1, 20),\n",
     "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
     "    ax.set_yscale(\"log\")\n",
     "    ax.set_yticks([0.1, 1, 10])\n",
     "    ax.set_yticklabels([0.1, 1, 10])\n",
-    "    ax.set_xlabel(\"Time [Gyr]\")\n",
-    "    ax.set_ylabel(r\"SFR [$\\mathrm{M}_\\odot \\, \\mathrm{yr}^{-1}$]\")\n",
-    "    ax.label_outer()\n",
+    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "        ax.set_xlabel(\"Time [Gyr]\")\n",
+    "        ax.tick_params(labelbottom=True)\n",
+    "    if ax.get_subplotspec().is_first_col():\n",
+    "        ax.set_ylabel(r\"SFR [$\\mathrm{M}_\\odot \\, \\mathrm{yr}^{-1}$]\")\n",
     "\n",
-    "for idx, ax in enumerate(axs.flatten()):\n",
-    "    galaxy = idx + 1\n",
-    "    simulation = f\"au{galaxy}_or_l4\"\n",
+    "for i, simulation in enumerate(SAMPLE):\n",
+    "    ax = axs.flatten()[i]\n",
+    "    label = f\"Au{parse(simulation)[0]}\"\n",
     "    sfr = calculate_sfr_by_region_evolution(simulation)\n",
     "    sfr.dropna(inplace=True)\n",
     "    for component in settings.components:\n",
@@ -156,16 +179,17 @@
     "    ax.plot(sfr[\"Time_Gyr\"], savgol_filter(sfr[\"SFR_Msun/yr\"], 5, 1),\n",
     "            c='k', lw=1.0, label=\"Total\", zorder=10)\n",
     "    ax.text(x=0.95, y=0.95, size=6.0,\n",
-    "            s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
+    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
     "            ha='right', va='top', transform=ax.transAxes)\n",
     "\n",
     "    if ax == axs[0, 0]:\n",
-    "        ax.legend(loc=\"upper left\", framealpha=0.0, fontsize=4.0)\n",
+    "        ax.legend(loc=\"lower center\", framealpha=0.0, fontsize=5.0,\n",
+    "                  bbox_to_anchor=(3.5, -4.9), ncol=1)\n",
     "\n",
     "    ax.xaxis.label.set_size(8.0)\n",
     "    ax.yaxis.label.set_size(8.0)\n",
     "\n",
-    "    fig.savefig(f\"../images/sfr_by_region/originals{SUFFIX}.pdf\")\n",
+    "    fig.savefig(f\"../images/sfr_by_region/included{SUFFIX}.pdf\")\n",
     "\n",
     "plt.close(fig)"
    ]
