Add plot for individual galaxy.

--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +105,67 @@
     "\n",
     "    return (s.circularity[is_real_star & is_main_obj],\n",
     "            s.normalized_potential[is_real_star & is_main_obj],)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_phase_space_for_galaxy(simulation: str) -> None:\n",
+    "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
+    "\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.set_axisbelow(True)\n",
+    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
+    "\n",
+    "    ax.set_xlim(-1.4, 1.4)\n",
+    "    ax.set_xticks([-1, 0, 1])\n",
+    "    ax.set_xlabel(r'$\\epsilon = j_z \\, j_\\mathrm{circ}^{-1}$')\n",
+    "\n",
+    "    ax.set_ylim(-1, 0)\n",
+    "    ax.set_yticks([-.8, -.6, -.4, -.2, 0])\n",
+    "    ax.set_ylabel(r'$\\tilde{e} = e \\, \\left| e \\right|_\\mathrm{max}^{-1}$')\n",
+    "\n",
+    "    galaxy, _, _, _ = parse(simulation)\n",
+    "    label = f\"Au{galaxy}\"\n",
+    "    circularity, potential = read_data(simulation=simulation)\n",
+    "\n",
+    "    _, _, _, _ = ax.hist2d(\n",
+    "        circularity, potential,\n",
+    "        cmap='nipy_spectral', bins=200,\n",
+    "        range=[ax.get_xlim(), ax.get_ylim()],\n",
+    "        norm=mcolors.LogNorm(vmin=1E0, vmax=1E3), rasterized=True)\n",
+    "    ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            size=8.0, transform=ax.transAxes, ha='left', va='top')\n",
+    "\n",
+    "    # Draw lines for the components\n",
+    "    ax.plot([DISC_MIN_CIRC] * 2,\n",
+    "            ax.get_ylim(),\n",
+    "            ls=\"--\", c='k')\n",
+    "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2,\n",
+    "            ax.get_ylim(),\n",
+    "            ls=\"--\", c='k')\n",
+    "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2,\n",
+    "            ax.get_ylim(),\n",
+    "            ls=\"--\", c='k')\n",
+    "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC],\n",
+    "            [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
+    "            ls=\"--\", c='k')\n",
+    "\n",
+    "    fig.savefig(\n",
+    "        f\"../images/galaxy_decomposition/phase_space_{simulation}{SUFFIX}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_phase_space_for_galaxy(\"au6_or_l4_s127\")"
    ]
   },
   {
