--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
     "    ax.set_xlabel(r'$\\epsilon = j_z \\, j_\\mathrm{circ}^{-1}$')\n",
     "\n",
     "    ax.set_ylim(-1, 0)\n",
-    "    ax.set_yticks([-.8, -.6, -.4, -.2, 0])\n",
+    "    ax.set_yticks([-1, -.8, -.6, -.4, -.2, 0])\n",
     "    ax.set_ylabel(r'$\\tilde{e} = e \\, \\left| e \\right|_\\mathrm{max}^{-1}$')\n",
     "\n",
     "    galaxy, _, _, _ = parse(simulation)\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
