Add figure for one galaxy.

--- a/scripts/Stellar Mass by Region.ipynb
+++ b/scripts/Stellar Mass by Region.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
@@ -21,18 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup, set_axs_configuration\n",
-    "from auriga.settings import Settings"
+    "from auriga.settings import Settings\n",
+    "from auriga.parser import parse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +106,64 @@
     "        components_solar_masses[i] = df[\"Mass_Msun\"][\n",
     "            df[\"RegionTag\"] == i].sum()\n",
     "    return components_solar_masses / total_solar_masses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_galaxy(simulation: str) -> None:\n",
+    "    settings = Settings()\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
+    "\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "\n",
+    "    ax.set_xlim(-0.5, 3.5)\n",
+    "    ax.set_xticks([0, 1, 2, 3])\n",
+    "    ax.set_xticklabels([])\n",
+    "\n",
+    "    ax.set_ylim(0, 1)\n",
+    "    ax.set_yticks([0, 0.2, 0.4, 0.6, 0.8, 1])\n",
+    "    ax.set_ylabel(r\"$f_\\star$\")\n",
+    "\n",
+    "    label = f\"Au{parse(simulation)[0]}\"\n",
+    "    data = get_statistics(read_data(simulation))\n",
+    "\n",
+    "    for j in range(len(data)):\n",
+    "        ax.bar(x=j, height=data[j],\n",
+    "               color=list(settings.component_colors.values())[j],\n",
+    "               width=0.5, linewidth=0)\n",
+    "        ax.text(j, data[j] + 0.025,\n",
+    "                s=r\"$\\textbf{\" + str(int(np.round(100 * data[j], 0))) \\\n",
+    "                    + \"\\%\" + \"}$\",\n",
+    "                c=list(settings.component_colors.values())[j],\n",
+    "                ha=\"center\", va=\"bottom\", size=8.0)\n",
+    "        ax.text(j, -0.05, size=8.0,\n",
+    "                s=r\"$\\textbf{\" + settings.components[j] + \"}$\",\n",
+    "                c=list(settings.component_colors.values())[j],\n",
+    "                ha=\"center\", va=\"top\")\n",
+    "\n",
+    "    ax.text(\n",
+    "        x=0.05, y=0.95, size=8.0,\n",
+    "        s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "        ha=\"left\", va=\"top\", transform=ax.transAxes)\n",
+    "\n",
+    "    fig.savefig(\n",
+    "        f\"../images/galaxy_decomposition/\"\n",
+    "        f\"stellar_mass_distribution_{simulation}{SUFFIX}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_galaxy(\"au6_or_l4_s127\")"
    ]
   },
   {
