Add figure for Au6.

--- a/scripts/Stellar Formation Time.ipynb
+++ b/scripts/Stellar Formation Time.ipynb
@@ -9,19 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import pandas as pd\n",
@@ -31,19 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup\n",
     "from auriga.paths import Paths\n",
-    "from auriga.settings import Settings"
+    "from auriga.settings import Settings\n",
+    "from auriga.parser import parse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISC_STD_CIRC = settings.disc_std_circ\n",
+    "DISC_MIN_CIRC = settings.disc_min_circ\n",
+    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
+    "SUFFIX = \"_02\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,10 +66,10 @@
     "\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=settings.disc_std_circ,\n",
-    "        disc_min_circ=settings.disc_min_circ,\n",
-    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
-    "        bulge_max_specific_energy=settings.bulge_max_specific_energy,\n",
+    "        disc_std_circ=DISC_STD_CIRC,\n",
+    "        disc_min_circ=DISC_MIN_CIRC,\n",
+    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
+    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY,\n",
     "    )\n",
     "    s.tag_in_situ_stars()\n",
     "    s.add_stellar_age()\n",
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "for simulation in simulations:\n",
     "    df = read_data(simulation=simulation)\n",
+    "    label = f\"Au{parse(simulation)[0]}\"\n",
     "\n",
     "    fig = plt.figure(figsize=(7.4, 2.0))\n",
     "    gs = fig.add_gridspec(nrows=1, ncols=4, hspace=0.0, wspace=0.0)\n",
@@ -149,12 +154,12 @@
     "                  bbox_to_anchor=(0.009, 0.65))\n",
     "\n",
     "    axs[0].text(\n",
-    "        x=0.95, y=0.95, size=6.0,\n",
-    "        s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
+    "        x=0.95, y=0.95, size=8.0,\n",
+    "        s=r\"$\\texttt{\" + label + \"}$\",\n",
     "        ha='right', va='top', transform=axs[0].transAxes)\n",
     "\n",
     "    fig.savefig(\n",
-    "        f\"../images/stellar_formation_time/{simulation}.pdf\")\n",
+    "        f\"../images/stellar_formation_time/{simulation}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
    ]
   }
