--- a/scripts/Stellar Formation Time.ipynb
+++ b/scripts/Stellar Formation Time.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
     "                bins=28, range=(0, 14))\n",
     "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "        axs[idx].plot(\n",
-    "            bin_centers, hist / n_stars_comp,\n",
+    "            bin_centers, hist / n_stars_comp, zorder=12,\n",
     "            c=settings.component_colors[component], lw=1)\n",
     "\n",
     "        hist, _ = np.histogram(\n",
@@ -135,7 +135,7 @@
     "                    (df[\"RegionTag\"] == idx) & (df[\"IsInSitu\"] == 1)],\n",
     "                bins=28, range=(0, 14))\n",
     "        axs[idx].plot(\n",
-    "            bin_centers, hist / n_stars_comp,\n",
+    "            bin_centers, hist / n_stars_comp, zorder=12,\n",
     "            c='k', lw=0.75, ls=(0, (3, 1.5, 1, 1.5)), label=\"In-Situ Stars\")\n",
     "\n",
     "        hist, _ = np.histogram(\n",
@@ -143,7 +143,7 @@
     "                    (df[\"RegionTag\"] == idx) & (df[\"IsInSitu\"] == 0)],\n",
     "                bins=28, range=(0, 14))\n",
     "        axs[idx].plot(\n",
-    "            bin_centers, hist / n_stars_comp,\n",
+    "            bin_centers, hist / n_stars_comp, zorder=12,\n",
     "            c='k', lw=0.75, ls=(0, (5, 1.5)), label=\"Ex-Situ Stars\")\n",
     "\n",
     "        axs[idx].text(x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
