Add new data and figures.

--- a/scripts/Stellar Origin.ipynb
+++ b/scripts/Stellar Origin.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,25 +33,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "figure_setup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "figure_setup()\n",
     "settings = Settings()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISC_STD_CIRC = settings.disc_std_circ\n",
+    "DISC_MIN_CIRC = settings.disc_min_circ\n",
+    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
+    "SUFFIX = \"_02\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,10 +65,10 @@
     "    \n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=settings.disc_std_circ,\n",
-    "        disc_min_circ=settings.disc_min_circ,\n",
-    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
-    "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
+    "        disc_std_circ=DISC_STD_CIRC,\n",
+    "        disc_min_circ=DISC_MIN_CIRC,\n",
+    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
+    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
     "    s.tag_in_situ_stars()\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
@@ -79,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,12 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = {}\n",
-    "for galaxy in settings.galaxies:\n",
+    "for galaxy in settings.groups[\"Included\"]:\n",
     "    simulation = f\"au{galaxy}_or_l4_s127\"\n",
     "    df = read_data(simulation)\n",
     "    bar_widths, num_labels, labels, colors = prepare_data(df)\n",
@@ -144,19 +149,19 @@
     "        }\n",
     "\n",
     "    # Sava data as json\n",
-    "    with open(\"../results/stellar_origin.json\", \"w\") as f:\n",
+    "    with open(f\"../results/stellar_origin{SUFFIX}.json\", \"w\") as f:\n",
     "        json.dump(data, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_in_situ_plot_for_galaxy(simulation: str):\n",
     "    # Read data\n",
-    "    with open(\"../results/stellar_origin.json\") as f:\n",
+    "    with open(f\"../results/stellar_origin{SUFFIX}.json\") as f:\n",
     "        data = json.load(f)[simulation]\n",
     "        bar_widths = np.array(data[\"BarWidths\"])\n",
     "        num_labels = data[\"NumericalLabels\"]\n",
@@ -190,13 +195,13 @@
     "            size=8.0, ha='left', va='bottom',\n",
     "            )\n",
     "\n",
-    "    fig.savefig(f\"../images/stellar_origin_by_region/{simulation}.pdf\")\n",
+    "    fig.savefig(f\"../images/stellar_origin_by_region/{simulation}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
