--- a/scripts/Stellar Origin.ipynb
+++ b/scripts/Stellar Origin.ipynb
@@ -22,13 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup\n",
-    "from auriga.settings import Settings"
+    "from auriga.settings import Settings\n",
+    "from auriga.parser import parse"
    ]
   },
   {
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,6 +168,8 @@
     "        num_labels = data[\"NumericalLabels\"]\n",
     "        labels = data[\"ComponentLabel\"]\n",
     "        colors = data[\"Colors\"]\n",
+    "\n",
+    "    label = f\"Au{parse(simulation)[0]}\"\n",
     "\n",
     "    fig = plt.figure(figsize=(3.0, 2.5))\n",
     "    gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
@@ -191,8 +194,8 @@
     "    ax.set_xlabel('In-Situ Star Percentage')\n",
     "\n",
     "    ax.text(x=ax.get_xlim()[0], y=ax.get_ylim()[1],\n",
-    "            s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
-    "            size=8.0, ha='left', va='bottom',\n",
+    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            size=9.0, ha='left', va='bottom',\n",
     "            )\n",
     "\n",
     "    fig.savefig(f\"../images/stellar_origin_by_region/{simulation}{SUFFIX}.pdf\")\n",
