--- a/scripts/Stellar Origin.ipynb
+++ b/scripts/Stellar Origin.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
     "                    color=colors,\n",
     "                    linewidth=0)\n",
     "    padding = 1 if 100 * bar_widths.min() <= 20 else -30\n",
-    "    ax.bar_label(hbars, labels=num_labels, padding=padding,)\n",
+    "    ax.bar_label(hbars, labels=num_labels, padding=padding, color=\"white\")\n",
     "    ax.set_yticks(np.arange(bar_widths.shape[0]), labels=labels)\n",
     "    ax.set_xlabel('In-Situ Star Percentage')\n",
     "\n",
@@ -200,6 +200,15 @@
     "\n",
     "    fig.savefig(f\"../images/stellar_origin_by_region/{simulation}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_in_situ_plot_for_galaxy(simulation=f\"au6_or_l4_s127\")"
    ]
   },
   {
