--- a/scripts/Stellar Migration.ipynb
+++ b/scripts/Stellar Migration.ipynb
@@ -10,19 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -33,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "settings = Settings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISC_STD_CIRC = settings.disc_std_circ\n",
+    "DISC_MIN_CIRC = settings.disc_min_circ\n",
+    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
+    "SUFFIX = \"_02\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLE = [f\"au{i}_or_l4\" for i in settings.groups[\"Included\"]]"
    ]
   },
   {
@@ -70,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,10 +90,10 @@
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_in_situ_stars()\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=settings.disc_std_circ,\n",
-    "        disc_min_circ=settings.disc_min_circ,\n",
-    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
-    "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
+    "        disc_std_circ=DISC_STD_CIRC,\n",
+    "        disc_min_circ=DISC_MIN_CIRC,\n",
+    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
+    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
@@ -99,17 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_reduced_data(simulation: str) -> pd.DataFrame:\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=settings.disc_std_circ,\n",
-    "        disc_min_circ=settings.disc_min_circ,\n",
-    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
-    "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
+    "        disc_std_circ=DISC_STD_CIRC,\n",
+    "        disc_min_circ=DISC_MIN_CIRC,\n",
+    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
+    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
@@ -125,21 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../results/stellar_migration.json\") as f:\n",
-    "       migration_matrices = json.load(f)\n",
+    "migration_matrices = {}\n",
     "\n",
-    "for galaxy in tqdm(settings.galaxies):\n",
-    "    SIMULATION = f\"au{galaxy}_or_l4\"\n",
-    "    df = read_data(f\"{SIMULATION}_s127\")\n",
+    "for simulation in SAMPLE:\n",
+    "    df = read_data(f\"{simulation}_s127\")\n",
     "\n",
     "    # Find component tag at birth\n",
     "    component_at_birth = -1 * np.ones(len(df), dtype=np.int8)\n",
     "    for i in range(40, 127, 1):\n",
-    "        this_df = read_reduced_data(f\"{SIMULATION}_s{i}\")\n",
+    "        this_df = read_reduced_data(f\"{simulation}_s{i}\")\n",
     "\n",
     "        idx = find_indices(\n",
     "            this_df[\"ID\"].to_numpy(),\n",
@@ -164,9 +174,9 @@
     "                    & (df[\"ComponentTagAtBirth\"] == j)).sum() \\\n",
     "                        / n_particles * 100\n",
     "    \n",
-    "    migration_matrices[SIMULATION] = list(migration_matrix.flatten())\n",
+    "    migration_matrices[simulation] = list(migration_matrix.flatten())\n",
     "\n",
-    "    with open(\"../results/stellar_migration.json\", \"w\") as f:\n",
+    "    with open(f\"../results/stellar_migration{SUFFIX}.json\", \"w\") as f:\n",
     "        json.dump(migration_matrices, f)"
    ]
   },
@@ -174,18 +184,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Results"
+    "## Load Results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read data\n",
-    "with open(\"../results/stellar_migration.json\", 'r') as f:\n",
-    "    migration_matrices = json.load(f)"
+    "# # Read data\n",
+    "# with open(f\"../results/stellar_migration{SUFFIX}.json\", 'r') as f:\n",
+    "#     migration_matrices = json.load(f)"
    ]
   },
   {
@@ -197,58 +207,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SIMULATION = \"au6_or_l4\""
+    "# SIMULATION = \"au6_or_l4\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "migration_matrix = np.array(migration_matrices[SIMULATION]).reshape(4, 4)"
+    "# migration_matrix = np.array(migration_matrices[SIMULATION]).reshape(4, 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(3.0, 3.0))\n",
-    "gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
-    "ax = gs.subplots(sharex=True, sharey=False)\n",
+    "# fig = plt.figure(figsize=(3.0, 3.0))\n",
+    "# gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
+    "# ax = gs.subplots(sharex=True, sharey=False)\n",
     "\n",
-    "ax.matshow(migration_matrix, cmap=\"viridis\", vmin=0, vmax=100)\n",
+    "# ax.matshow(migration_matrix, cmap=\"viridis\", vmin=0, vmax=100)\n",
     "\n",
-    "ax.set_xlabel(r\"Component at Birth\")\n",
-    "ax.set_xticks([0, 1, 2, 3])\n",
-    "ax.set_xticklabels(settings.components)\n",
-    "ax.tick_params(axis='x', bottom=True, top=False,\n",
-    "               labelbottom=True, labeltop=False)\n",
+    "# ax.set_xlabel(r\"Component at Birth\")\n",
+    "# ax.set_xticks([0, 1, 2, 3])\n",
+    "# ax.set_xticklabels(settings.components)\n",
+    "# ax.tick_params(axis='x', bottom=True, top=False,\n",
+    "#                labelbottom=True, labeltop=False)\n",
     "\n",
-    "ax.set_ylabel(r\"Component at $z=0$\")\n",
-    "ax.set_yticks([0, 1, 2, 3])\n",
-    "ax.set_yticklabels(settings.components)\n",
+    "# ax.set_ylabel(r\"Component at $z=0$\")\n",
+    "# ax.set_yticks([0, 1, 2, 3])\n",
+    "# ax.set_yticklabels(settings.components)\n",
     "\n",
-    "for i in range(migration_matrix.shape[0]):\n",
-    "    for j in range(migration_matrix.shape[1]):\n",
-    "        color = \"white\" if migration_matrix[j, i] < 50 else \"black\"\n",
-    "        ax.text(\n",
-    "            i, j,\n",
-    "            r\"$\\mathbf{\" + f\"{np.round(migration_matrix[j, i], 1)}\" + r\"\\%}$\",\n",
-    "            c=color, ha=\"center\", va=\"center\")\n",
+    "# for i in range(migration_matrix.shape[0]):\n",
+    "#     for j in range(migration_matrix.shape[1]):\n",
+    "#         color = \"white\" if migration_matrix[j, i] < 50 else \"black\"\n",
+    "#         ax.text(\n",
+    "#             i, j,\n",
+    "#             r\"$\\mathbf{\" + f\"{np.round(migration_matrix[j, i], 1)}\" + r\"\\%}$\",\n",
+    "#             c=color, ha=\"center\", va=\"center\")\n",
     "\n",
-    "ax.text(x=0.01, y=1.01, size=7.0,\n",
-    "        s=r\"$\\texttt{\" + f\"{SIMULATION}\".upper() + \"}$\",\n",
-    "        ha=\"left\", va=\"bottom\", transform=ax.transAxes)\n",
+    "# ax.text(x=0.01, y=1.01, size=7.0,\n",
+    "#         s=r\"$\\texttt{\" + f\"{SIMULATION}\".upper() + \"}$\",\n",
+    "#         ha=\"left\", va=\"bottom\", transform=ax.transAxes)\n",
     "\n",
-    "fig.savefig(f\"../images/stellar_migration/{SIMULATION}.pdf\")\n",
-    "plt.close(fig)"
+    "# fig.savefig(f\"../images/stellar_migration/{SIMULATION}.pdf\")\n",
+    "# plt.close(fig)"
    ]
   },
   {
@@ -260,67 +270,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Turn dictionary into array\n",
-    "migration_matrices_arr = np.nan * np.ones((31, 4, 4))\n",
-    "for i in settings.galaxies:\n",
-    "    migration_matrices_arr[i] = np.array(\n",
-    "        migration_matrices[f\"au{i}_or_l4\"]).reshape(4, 4)"
+    "# # Turn dictionary into array\n",
+    "# migration_matrices_arr = np.nan * np.ones((31, 4, 4))\n",
+    "# for i in settings.galaxies:\n",
+    "#     migration_matrices_arr[i] = np.array(\n",
+    "#         migration_matrices[f\"au{i}_or_l4\"]).reshape(4, 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "groups = [[i for i in range(1, 31)],\n",
-    "          settings.groups[\"MilkyWayLike\"],\n",
-    "          settings.groups[\"NotMilkyWayLike\"],\n",
-    "          settings.groups[\"InsideOut\"],\n",
-    "          settings.groups[\"NotInsideOut\"]]\n",
-    "names = [\"All\", \"G1\", \"G2\", \"IO\", \"OI\"]\n",
-    "colors = [\"black\", \"tab:green\", \"tab:red\", \"tab:purple\", \"tab:blue\"]"
+    "# groups = [[i for i in range(1, 31)],\n",
+    "#           settings.groups[\"MilkyWayLike\"],\n",
+    "#           settings.groups[\"NotMilkyWayLike\"],\n",
+    "#           settings.groups[\"InsideOut\"],\n",
+    "#           settings.groups[\"NotInsideOut\"]]\n",
+    "# names = [\"All\", \"G1\", \"G2\", \"IO\", \"OI\"]\n",
+    "# colors = [\"black\", \"tab:green\", \"tab:red\", \"tab:purple\", \"tab:blue\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(7.2, 7.2))\n",
-    "gs = fig.add_gridspec(nrows=4, ncols=4, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=False)\n",
+    "# fig = plt.figure(figsize=(7.2, 7.2))\n",
+    "# gs = fig.add_gridspec(nrows=4, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "# axs = gs.subplots(sharex=True, sharey=False)\n",
     "\n",
-    "for ax in axs.flatten():\n",
-    "    ax.set_xlim(0, 100)\n",
-    "    ax.set_xticks([20, 40, 60, 80])\n",
-    "    ax.set_xlabel(r\"$f_\\star$ [\\%]\")\n",
-    "    ax.set_ylim(0, 0.14)\n",
-    "    ax.set_yticks([0.02, 0.04, 0.06, 0.08, 0.10, 0.12])\n",
-    "    ax.set_ylabel(\"PDF\")\n",
-    "    ax.label_outer()\n",
+    "# for ax in axs.flatten():\n",
+    "#     ax.set_xlim(0, 100)\n",
+    "#     ax.set_xticks([20, 40, 60, 80])\n",
+    "#     ax.set_xlabel(r\"$f_\\star$ [\\%]\")\n",
+    "#     ax.set_ylim(0, 0.14)\n",
+    "#     ax.set_yticks([0.02, 0.04, 0.06, 0.08, 0.10, 0.12])\n",
+    "#     ax.set_ylabel(\"PDF\")\n",
+    "#     ax.label_outer()\n",
     "\n",
-    "for i in range(len(settings.components)):\n",
-    "    for j in range(len(settings.components)):\n",
-    "        title = r\"$\\textbf{\" + settings.components[j] + r\"}_\\mathrm{Birth} \\to \\textbf{\" \\\n",
-    "            + settings.components[i] + r\"}_\\mathrm{Today}$\"\n",
-    "        axs[i, j].text(x=0.5, y=0.95, s=title,\n",
-    "                       size=7.5, transform=axs[i, j].transAxes,\n",
-    "                       ha=\"center\", va=\"top\")\n",
-    "        for k, group in enumerate(groups):\n",
-    "            axs[i, j].hist(migration_matrices_arr[group, i, j],\n",
-    "                           range=(0, 100), bins=10, density=True, lw=1.5,\n",
-    "                           histtype=\"step\", color=colors[k], label=names[k])\n",
+    "# for i in range(len(settings.components)):\n",
+    "#     for j in range(len(settings.components)):\n",
+    "#         title = r\"$\\textbf{\" + settings.components[j] + r\"}_\\mathrm{Birth} \\to \\textbf{\" \\\n",
+    "#             + settings.components[i] + r\"}_\\mathrm{Today}$\"\n",
+    "#         axs[i, j].text(x=0.5, y=0.95, s=title,\n",
+    "#                        size=7.5, transform=axs[i, j].transAxes,\n",
+    "#                        ha=\"center\", va=\"top\")\n",
+    "#         for k, group in enumerate(groups):\n",
+    "#             axs[i, j].hist(migration_matrices_arr[group, i, j],\n",
+    "#                            range=(0, 100), bins=10, density=True, lw=1.5,\n",
+    "#                            histtype=\"step\", color=colors[k], label=names[k])\n",
     "\n",
-    "axs[0, 0].legend(loc=\"center right\", framealpha=0, fontsize=7.0)\n",
+    "# axs[0, 0].legend(loc=\"center right\", framealpha=0, fontsize=7.0)\n",
     "\n",
-    "fig.savefig(f\"../images/stellar_migration/statistics.pdf\")\n",
-    "plt.close(fig)"
+    "# fig.savefig(f\"../images/stellar_migration/statistics.pdf\")\n",
+    "# plt.close(fig)"
    ]
   }
  ],
